Fix logo border on Safari
Safari doesn't like translucent borders on image anchors.
So replaced border with a box-shadow which renders correctly.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -258,7 +258,8 @@ mark {
 #header .logo {
     margin-right: 2rem;
     max-height: 8rem;
-    border: 3px solid rgb(0,0,0,0.08);
+    border: none;
+    box-shadow: 0px 0px 0px 3px rgba(0,0,0,0.08);
     {{ if .Site.Params.logoAsCircle }}
         border-radius: 50%;
     {{ end }}
